syntax = "proto3";
package storage_service.v1;

option go_package = "./storage_service;storage_servicev1";

service File {
  rpc FileSave (FileSaveReq) returns (FileSaveRes);
  rpc FileRead (FileReadReq) returns (FileReadRes);
  rpc FileDiff (FileDiffReq) returns (FileDiffRes);
}

message FileSaveReq {
  string folder = 1;
  string content = 2;
  string filename = 3;
  string ext = 4;
}

message FileSaveRes {
  string filepath = 1;
}

message FileReadReq {
  string folder = 1;
  string filename = 2;
  string ext = 3;
}

message FileReadRes {
  string content = 1;
}

message FileDiffReq {
    string folder = 1;
    string filename1 = 2;
    string filename2 = 3;
}

message FileDiffRes {
    string result = 1;
}
